# chess_lib

./: .gitignore  Cargo.toml
examples/: cli.rs  gui.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/egui_chess/: Cargo.toml  index.html
examples/egui_chess/src/: app.rs  main.rs  utils.rs
examples/egui_chess/src/app/: helper.rs  input.rs  render.rs
examples/gui/: Cargo.toml
examples/gui/src/: consts.rs  game.rs  main.rs  render.rs  ui.rs  utils.rs
examples/gui/src/game/: input.rs
examples/gui/src/render/: board.rs  history.rs  moves.rs  pieces.rs
src/: bitboard.rs  board.rs  castling.rs  castling_rights.rs  lib.rs  lookup_tables.rs  magics.rs  move.rs  move_enums.rs  move_error.rs  move_list.rs  piece.rs  player.rs  tile.rs  zobrist.rs
src/bitboard/: bit_manip.rs  constants.rs  tests.rs
src/board/: attackgen.rs  check_mate.rs  constants.rs  constructors.rs  debug.rs  fen.rs  helper.rs  history.rs  mod.rs  movegen.rs  movement.rs  tests.rs
src/castling/: constants.rs  tests.rs
src/magics/: between.rs  bishop_attacks.rs  bishop_magics.rs  king_attacks.rs  knight_attacks.rs  mod.rs  rook_attacks.rs  rook_magics.rs
src/player/: constants.rs  tests.rs
src/tile/: constants.rs  tests.rs
src/zobrist/: consts.rs
