[package]
name = "egui_chess"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
chess_lib = { path = "../../" }
# eframe = { version = "0.31.1", features = ["web"] }
eframe = "0.31.1"
image = "0.25.6"
log = "0.4.27"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"]}
wasm-bindgen = "0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
